add lorebook edit
