# src/app/api/presets/[id]/route.ts
@@ -3,6 +3,9 @@ import {NextResponse} from 'next/server';
 import {repository} from "@/business/preset/repository";
 import {interceptor} from "@/interceptor";
 import {PresetModel} from "@/business/preset/models";
+import {validate} from "uuid";
+import {eq} from "drizzle-orm";
+import {presets} from "@/business/preset/db";
 
 /**
  * 获取预设
@@ -14,8 +17,9 @@ import {PresetModel} from "@/business/preset/models";
 export const GET = interceptor.createRoute(
     async (request, records) => {
         const {id} = await records.context.params;
-        const {withDetails} = records.searchParams;
-        const model = await repository.get(id, withDetails);
+        const {withDetails} = records.searchParams as { withDetails?: boolean };
+        const model = await repository.get(id, withDetails,
+            eq(validate(id) ? presets.id : presets.code, id));
         return NextResponse.json(model);
     }
 )
@@ -23,16 +27,15 @@ export const GET = interceptor.createRoute(
 /**
  * 更新预设
  * @pathParams { id:string }
- * @response PresetModel
+ * @body any
  * @openapi
  */
 export const PUT = interceptor.createRoute(
     async (request, records) => {
         const {id} = await records.context.params;
         const model = records.body as Partial<PresetModel>;
-
         await repository.update(id, model);
-        return NextResponse.json(model);
+        return NextResponse.json(null);
     }
 )
 
